[package]
name = "cruppers"
authors = ["Nevin Flanagan"]
description = "A minimal crate to support using no_std Rust libraries in C++ "
repository = "https://github.com/alestane/cruppers"
version = "0.4.2"
edition = "2021"
readme = "README.md"
license = "UPL-1.0"

[lib]
name="cpp"
crate-type=["rlib"]

[features]
default = ["memory", "exception"]
memory = []
exception = []
iostream = []

[build-dependencies]
cc  = ">= 1.0.0"
