[package]
name = "cruppers"
authors = ["Nevin Flanagan"]
description = "A minimal crate to support using no_std Rust libraries in C++ "
repository = "https://github.com/alestane/cruppers"
version = "0.5.0"
edition = "2021"
readme = "README.md"
license = "UPL-1.0"

[lib]
name="cpp"
crate-type=["rlib"]

[[example]]
name = "hello_world"
crate-type = ["staticlib"]
required-features = ["memory", "iostream"]

[features]
default = ["memory", "exception", "iostream"]
memory = []
exception = []
iostream = []

[build-dependencies]
cc  = ">= 1.0.0"
